# fca

./: .gitignore  .pydevproject  README.md  setup.cfg  setup.py
fca/: __init__.py  compare_context.py  concept.py  concept_lattice.py  concept_system.py  context.py  implication.py  mvcontext.py  partial_context.py  scale.py
fca/algorithms/: __init__.py  aibasis.py  closure_operators.py  covering_relation.py  dg_basis.py  exploration.py  factors.py  implication_covers.py  norris.py  patterns.py  scaling.py
fca/algorithms/exploration/: explorationtest.py
fca/algorithms/exploration/examples/: bi_unars.py
fca/algorithms/exploration2/: exploration.py  explorationtest.py
fca/algorithms/exploration2/examples/: numbers.py
fca/algorithms/filtering/: __init__.py  extentsize.py  filter.py  intentsize.py  probability.py  separation.py  stability.py
fca/algorithms/tests/: test_aibasis.py  test_dg_iter.py  test_factors.py
fca/readwrite/: comma_separated.py  cxt.py  dot.py  tab_separated.py  xml_.py
fca/tests/: test_context.py  test_implication.py
tests/: test_context.py  test_implication.py
tests/algorithms/: big_cxt.cxt  ms_cxt.cxt  small_cxt.cxt  test_aibasis.py  test_dg_basis.py  test_dg_iter.py  test_factors.py  test_lattice.py
