[metadata]
name = fca
author =
    Sergei Obiedkov
    Nikita Romashkin
    Artem Revenko
author-email =
    not given
    romashkin.nikita@gmail.com
    artreven@gmail.com
summary = Python package for formal concept analysis
description-file = README.md
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    Formal Concept Analysis
    Data Analysis
    Computer Science
    Algebraic Lattices
    Implications
    Artificial Intelligence
license = LGPL

# [files]

# [entry_points]